--- a/vic.html
+++ b/vic.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Create your First Chart</title>
+<title>Create your First Vic Chart</title>
 <style type="text/css">
 #container {
 width: 1000px;
