--- a/vic.html
+++ b/vic.html
@@ -31,7 +31,7 @@ let fusionTable = fusionDataStore.createDataTable(data, schema);
         dataSource: {
             data: fusionTable,
             caption: {
-                text: 'Online Sales of a SuperStore in the US'
+                text: 'Online Sales of a Store in the US'
             }
         }
     }).render()
