--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@ let fusionTable = fusionDataStore.createDataTable(data, schema);
     }).render()
 
 </script>
+</body>
+<div id="container"></div>
+<script src="fusioncharts.js"></script>
+<script src="fusioncharts.timeseries.js"></script>
+<script src="nsw_prices.js"></script>
+<script src="schema.js"></script>
+<script src="nsw_high_impact_outages.js"></script>
 <script>
 let fusionDataStore = new FusionCharts.DataStore();
 let fusionTable = fusionDataStore.createDataTable(data, schema);
@@ -99,6 +106,7 @@ let fusionTable = fusionDataStore.createDataTable(data, schema);
 </body>
 
 </html>
+
 
 
 
