--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ let fusionTable = fusionDataStore.createDataTable(data, schema);
 
 </script>
 </body>
+<body>
 <div id="container"></div>
 <script src="fusioncharts.js"></script>
 <script src="fusioncharts.timeseries.js"></script>
@@ -106,6 +107,7 @@ let fusionTable = fusionDataStore.createDataTable(data, schema);
 </body>
 
 </html>
+
 
 
 
